--- a/src/Project/Sample/code/Project.Sample.csproj
+++ b/src/Project/Sample/code/Project.Sample.csproj
@@ -146,7 +146,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\web.config" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
