--- a/src/Feature/SocialWall/code/Feature.SocialWall.csproj
+++ b/src/Feature/SocialWall/code/Feature.SocialWall.csproj
@@ -104,7 +104,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\SocialWall.cs" />
+    <Compile Include="Controllers\SocialWallController.cs" />
     <Compile Include="Models\SocialPostViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Templates.cs" />
